[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/PlayerIdle1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/PlayerIdle2.png" type="Texture" id=3]
[ext_resource path="res://assets/Cog.png" type="Texture" id=4]
[ext_resource path="res://assets/jump/jump3.png" type="Texture" id=5]
[ext_resource path="res://assets/jump/jump2.png" type="Texture" id=6]
[ext_resource path="res://assets/jump/jump4.png" type="Texture" id=7]
[ext_resource path="res://assets/jump/jump5.png" type="Texture" id=8]
[ext_resource path="res://assets/jump/jump1.png" type="Texture" id=9]
[ext_resource path="res://assets/jump/jump6.png" type="Texture" id=10]
[ext_resource path="res://assets/soundEffects/PlayerRight.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/soundEffects/PlayerLeft.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/soundEffects/157569__elektroproleter__cartoon-jump.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/soundEffects/160045__jorickhoofd__metal-hit-with-metal-bar-resonance.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/idle1.png" type="Texture" id=15]
[ext_resource path="res://assets/idle2.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Standard",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": false,
"name": "Jump",
"speed": 24.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 1.5
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53, 105 )

[sub_resource type="Animation" id=3]
resource_name = "Zoom"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:zoom:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.82, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:zoom:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.82, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 53, 100 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 59, 10 )

[node name="Node2D" type="Node2D"]
position = Vector2( 984, 541 )

[node name="Player" type="KinematicBody2D" parent="."]
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 800, 1000 )
gravity = 1900.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( -2, -21.75 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "Standard"
frame = 1
playing = true

[node name="Cog1" type="Sprite" parent="Player"]
position = Vector2( -1.99994, 42.25 )
scale = Vector2( 0.283453, 0.283453 )
texture = ExtResource( 4 )

[node name="Cog2" type="Sprite" parent="Player"]
position = Vector2( -27.0001, 66.25 )
scale = Vector2( 0.290999, 0.290999 )
texture = ExtResource( 4 )

[node name="Cog3" type="Sprite" parent="Player"]
position = Vector2( 22.9999, 66.25 )
scale = Vector2( 0.288703, 0.288703 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -2, -21.75 )
shape = SubResource( 2 )

[node name="PlayerCam" type="Camera2D" parent="Player"]
position = Vector2( -2, -22 )
current = true
zoom = Vector2( 1.82, 1.82 )
limit_left = 0
limit_top = 0
limit_right = 3506
limit_bottom = 2452
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_drag_margin = true

[node name="Tween" type="Tween" parent="Player/PlayerCam"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/PlayerCam"]
anims/Zoom = SubResource( 3 )

[node name="EnemyCheck" type="Area2D" parent="Player"]
position = Vector2( -2, 22.25 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/EnemyCheck"]
modulate = Color( 0.12549, 0, 1, 1 )
position = Vector2( 0, -39 )
shape = SubResource( 4 )

[node name="rightSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="leftSound" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( 0, -1 )
stream = ExtResource( 12 )
volume_db = -12.0

[node name="jumpSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 13 )

[node name="DeathByEnemy" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 14 )

[node name="EnemyTouched" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/EnemyTouched"]
position = Vector2( -2, -41 )
shape = SubResource( 5 )
[connection signal="area_entered" from="Player/EnemyCheck" to="Player" method="_on_EnemyCheck_area_entered"]
[connection signal="body_entered" from="Player/EnemyCheck" to="Player" method="_on_EnemyCheck_body_entered"]
[connection signal="finished" from="Player/DeathByEnemy" to="Player" method="_on_DeathByEnemy_finished"]
[connection signal="body_entered" from="Player/EnemyTouched" to="Player" method="_on_EnemyTouched_body_entered"]
